--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="/style.css" />
 <body>
 
-<h1>My First Heading</h1>
+<h1>Birdwatching</h1>
 
 <p>My first paragraph.</p>
 
