--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html>
+    <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="/style.css" />
+<title> Birdwatching</title>
+</head>
 <body>
-    
-<h1>Birdwatching</h1>
+<header>
+    <h1>Birdwatching</h1> 
+    <img src="images/dove.png" alt="a dove flying through the air">
+</header>
+<nav>
+    <ul>
+        <li>Home</li>
+        <li>Get Started</li>
+        <li>Photos</li>
+        <li>Gear</li>
+        <li>Forum</li>
+    </ul>
+</nav>
 
-<p>My first paragraph.</p>
+
 
 </body>
 </html>
