added aside with the images

--- a/index.html
+++ b/index.html
@@ -36,7 +36,13 @@
           and get out into the great outdoors!
         </p>
     </article>
-    
+    <aside>
+        <h2>Favourite Photos</h2>
+        <img src="images/favorite-1.jpg">
+        <img src="images/favorite-2.jpg">
+        <img src="images/favorite-3.jpg">
+        <img src="images/favorite-4.jpg">
+    </aside>
 </main>
 
 
