added alternative text to the imgs

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
     </article>
     <aside>
         <h2>Favourite Photos</h2>
-        <img src="images/favorite-1.jpg">
-        <img src="images/favorite-2.jpg">
-        <img src="images/favorite-3.jpg">
-        <img src="images/favorite-4.jpg">
+        <img src="images/favorite-1.jpg" alt="a green and black bird sitting on a bush branch">
+        <img src="images/favorite-2.jpg" alt="a peacock looking into the camera">
+        <img src="images/favorite-3.jpg" alt="a large white bird looking around in some greenary">
+        <img src="images/favorite-4.jpg" alt="a pelican looking around on top of a cliff">
     </aside>
 </main>
 
