--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<html lang="en ">
+<head>
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300%7CCinzel+Decorative:700"
+      rel="stylesheet"
+      type="text/css"
+    />
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="/style.css" />
@@ -13,15 +18,16 @@
 
 <nav>
     <ul>
-        <li>Home</li>
-        <li>Get Started</li>
-        <li>Photos</li>
-        <li>Gear</li>
-        <li>Forum</li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Get Started</a></li>
+        <li><a href="#">Photos</a></li>
+        <li><a href="#">Gear</a></li>
+        <li><a href="#">Forum</a></li>
     </ul>
 </nav>
 </header>
 <main>
+    
     <article>
         <h2>Welcome</h2>
         <p>
@@ -38,10 +44,10 @@
     </article>
     <aside>
         <h2>Favourite Photos</h2>
-        <img src="images/favorite-1.jpg" alt="a green and black bird sitting on a bush branch">
-        <img src="images/favorite-2.jpg" alt="a peacock looking into the camera">
-        <img src="images/favorite-3.jpg" alt="a large white bird looking around in some greenary">
-        <img src="images/favorite-4.jpg" alt="a pelican looking around on top of a cliff">
+        <a href="images/favorite-1.jpg"><img src="images/favorite-1_th.jpg" alt="a green and black bird sitting on a bush branch"> </a>
+        <a href="images/favorite-2.jpg"><img src="images/favorite-2_th.jpg" alt="a peacock looking into the camera"> </a>
+        <a href="images/favorite-3.jpg"><img src="images/favorite-3_th.jpg" alt="a large white bird looking around in some greenary"></a>
+        <a href="images/favorite-4.jpg"><img src="images/favorite-4_th.jpg" alt="a pelican looking around on top of a cliff"></a>
     </aside>
 </main>
 <footer>
